infrastructure/kubernetes/networking/policies/allow-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller
  namespace: sentinel-apps
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: sentinel-ingress
      ports:
        - protocol: TCP
          port: 8000 # API Gateway & Real-Time WS Engine
        - protocol: TCP
          port: 80   # Next.js UI Dashboard
